--- a/ASCOM Driver/ReadMe.htm
+++ b/ASCOM Driver/ReadMe.htm
@@ -165,10 +165,10 @@
                 <li>
                     To support debugging, the driver will create three log files in a Documents\ASCOM\Logs yyyy-mm-dd folder.
                     <ol>
-                        <li><b>ASCOM.OpenPowerBoxXXL.Driver.xxx</b> - One log per instance of the COM driver class. (Can be enabled / disabled through the Driver setup dialogue.)</li>
-                        <li><b>ASCOM.OpenPowerBoxXXL.Hardware.xxx</b> - One log from the shared hardware class containing information from all instances of the COM driver. (Can be enabled / disabled through the Driver setup dialogue.)</li>
+                        <li><b>ASCOM.AstroPowerBoxXXL.Driver.xxx</b> - One log per instance of the COM driver class. (Can be enabled / disabled through the Driver setup dialogue.)</li>
+                        <li><b>ASCOM.AstroPowerBoxXXL.Hardware.xxx</b> - One log from the shared hardware class containing information from all instances of the COM driver. (Can be enabled / disabled through the Driver setup dialogue.)</li>
                         <li>
-                            <b>ASCOM.OpenPowerBoxXXL.LocalServer.xxx</b> - One log for the local server executable itself. (After the driver is running stably, this log can be disabled if required
+                            <b>ASCOM.AstroPowerBoxXXL.LocalServer.xxx</b> - One log for the local server executable itself. (After the driver is running stably, this log can be disabled if required
                             by editing the TL.Enabled statement near the top of the LocalServer.cs file.)
                         </li>
                     </ol>
